Fixed horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-body {
+.body {
   width: 100%;
   margin: auto 0;
 }
@@ -117,7 +117,7 @@ img {
   }
 
   h1 {
-    font-size: 65px !important;
+    font-size: 50px !important;
   }
 
   .container-body {
@@ -134,5 +134,10 @@ img {
     width: 100%;
     margin: auto 0;
     padding: 10px;
+  }
+
+  .project_image {
+    width: 250px;
+    height: 250px;
   }
 }
